--- a/demo/node.js/views/demo.html
+++ b/demo/node.js/views/demo.html
@@ -34,6 +34,8 @@
                 width: 25, //弹层宽度，默认300
                 height: 10, //弹层高度，默认150
                 unit: "vw", //单位（px或vw），默认px，且IE6/7/8强制使用px。
+                fontSize:1.5, //字体大小，默认16。
+                fontUnit:"vw", //字体单位（px或vw），默认px，且IE6/7/8强制使用px。
                 callback_open: function() {
                     console.log("弹出后的回调方法");
                 },
