修改记录见readme.md

--- a/demo/node.js/views/demo.html
+++ b/demo/node.js/views/demo.html
@@ -31,11 +31,11 @@
             var obj = {
                 str: "提交成功", //弹出层显示文字内容，支持HTML标签
                 t: 1, //0 - 2.5s后自动关闭（默认） 1 - 不自动关闭,
-                width: 25, //弹层宽度，默认300
-                height: 10, //弹层高度，默认150
-                unit: "vw", //单位（px或vw），默认px，且IE6/7/8强制使用px。
-                fontSize: 1.5, //字体大小，默认16。
-                fontUnit: "vw", //字体单位（px或vw），默认px，且IE6/7/8强制使用px。
+                width: 300, //弹层宽度，默认300
+                height: 100, //弹层高度，默认100
+                unit: "px", //单位（px或vw），默认px，且IE6/7/8强制使用px。
+                fontSize: 16, //字体大小，默认16。
+                fontUnit: "px", //字体单位（px或vw），默认px，且IE6/7/8强制使用px。
                 callback_open: function() {
                     console.log("弹出后的回调方法");
                 },
