1. 兼容原生JS和AMD规范 2. 修改demo

--- a/demo/node.js/views/demo.html
+++ b/demo/node.js/views/demo.html
@@ -10,7 +10,7 @@
 
 <body>
     <div>
-        <h1>JS弹层演示</h1>
+        <h1>JS弹层演示，/app.js里改渲染页面</h1>
         <input type="button" value="点我弹层" />
         <div id="PromptLayer_white"></div>
         <div id="PromptLayer">
