--- a/demo/node.js/views/demo.html
+++ b/demo/node.js/views/demo.html
@@ -25,17 +25,18 @@
     <script src="/jq/PromptLayer.js" type="text/javascript"></script>
     <script type="text/javascript">
     $(function() {
-        PromptLayer.init();
 
         $("input[type=button]").click(function() {
-            var obj = {
+            var opt = {
                 str: "提交成功", //弹出层显示文字内容，支持HTML标签
-                t: 1, //0 - 2.5s后自动关闭（默认） 1 - 不自动关闭,
+                t: 1, // 0 - 自动关闭（默认） 1 - 不自动关闭,
                 width: 300, //弹层宽度，默认300
                 height: 100, //弹层高度，默认100
                 unit: "px", //单位（px或vw），默认px，且IE6/7/8强制使用px。
                 fontSize: 16, //字体大小，默认16。
                 fontUnit: "px", //字体单位（px或vw），默认px，且IE6/7/8强制使用px。
+                z_index: 200,
+                close_timer_ms: 1000, // 自动关闭时间，毫秒。默认2500
                 callback_open: function() {
                     console.log("弹出后的回调方法");
                 },
@@ -43,7 +44,7 @@
                     console.log("关闭后的回调方法");
                 }
             }
-            PromptLayer.show(obj);
+            PromptLayer.show(opt);
         });
     });
     </script>
